Making tests for errors on user registration form pass

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,16 @@
 <%= form_for @user do |f| %>
 
+	<% unless f.object.errors.empty? %>
+	  <div class="alert alert-error">
+	    <strong>Try again after fixing the following things:</strong><br/>
+	    <ul>
+	      <% f.object.errors.full_messages.each do |msg| %>
+	        <li><%= msg %></li>
+	      <% end %>
+	    </ul>
+	  </div>
+	<% end %>
+
   <p>
     <%= f.label "Email" %><br>
     <%= f.text_field "email" %>
