--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -13,11 +13,11 @@
         </ul>
         <div class="pull-right">
           <% if logged_in? %>
-            <%= link_to 'Logout', '#', class: 'btn' %>
+            <%= link_to 'Logout', logout_path, class: 'btn' %>
           <% else %>
             <%= link_to 'Sign Up', [:new, :user], class: 'btn btn-primary' %>
           <% end %>
-        s</div>
+        </div>
       </div>
     </div>
   </div>
