--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
       <div><%= flash[:success] %></div>
   <% end %>
 
+  <% if flash[:alert] %>
+      <div><%= flash[:alert] %></div>
+  <% end %>
+
 	
 	<%= render 'layouts/shared/nav' %>
 	
