Making tests for my projects navigation pass

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @project.title %></h1>
 
-<div class="navbar">
+<div >
 	<ul>
-		<li class="active"><a>Projects</a>
+		<li><a>Projects</a>
 		</li>
 	</ul>
 </div>
