--- a/app/views/projects/_displayProjects.html.erb
+++ b/app/views/projects/_displayProjects.html.erb
@@ -1,3 +1,7 @@
+<ul>
 <% @projects.each do |project| %>
-	<%= link_to project[:title], project %>
+	<li class="project"><%= link_to project[:title], project %></li>
 <% end %>
+</ul>
+
+<%= paginate @projects %>
