--- a/app/views/my/projects/edit.html.erb
+++ b/app/views/my/projects/edit.html.erb
@@ -1,4 +1,5 @@
 <%= form_for [:my, @project] do |f| %>
+
 	<%= f.label "project[title]"%>
 	<%= f.text_field :title%>
 
@@ -10,6 +11,8 @@
 
 	<%= f.label "project[goal]"%>
 	<%= f.number_field :goal%>
-
+	
 	<div class="actions-bigger-btn"><%= submit_tag 'Update Project'%></div>
 <% end %>
+
+<%=link_to "Manage Images", my_project_images_path(@project) %>
