--- a/app/views/my/projects/edit.html.erb
+++ b/app/views/my/projects/edit.html.erb
@@ -11,8 +11,9 @@
 
 	<%= f.label "project[goal]"%>
 	<%= f.number_field :goal%>
-	
+
 	<div class="actions-bigger-btn"><%= submit_tag 'Update Project'%></div>
 <% end %>
 
 <%=link_to "Manage Images", my_project_images_path(@project) %>
+<%= link_to 'Delete Project', project_path(@project), :confirm => 'Are you sure you want to delete this product?', :method => :delete %>
