--- a/app/views/my/projects/edit.html.erb
+++ b/app/views/my/projects/edit.html.erb
@@ -16,4 +16,4 @@
 <% end %>
 
 <%=link_to "Manage Images", my_project_images_path(@project) %>
-<%= link_to 'Delete Project', project_path(@project), :confirm => 'Are you sure you want to delete this product?', :method => :delete %>
+<%= link_to 'Delete Project', project_path(@project), :confirm => 'Are you sure you want to delete this project?', :method => :delete %>
